Update product colors and images in Home.html; add new images for green and white variants

--- a/Home.html
+++ b/Home.html
@@ -66,16 +66,16 @@
                         <h3>Available Colors</h3>
                         <div class="color-list">
                             <div class="color-option active" data-color="Black">
-                                <div class="color-circle" style="background-color: #000;"></div>
-                                <span>Black</span>
+                                <div class="color-circle" style="background-color: #979f6f;"></div>
+                                <span>Muted Green</span>
                             </div>
                             <div class="color-option" data-color="White">
-                                <div class="color-circle" style="background-color: #fff; border: 1px solid #ddd;"></div>
-                                <span>White</span>
+                                <div class="color-circle" style="background-color: #a7502f; border: 1px solid #ddd;"></div>
+                                <span>Burnt Orange</span>
                             </div>
                             <div class="color-option" data-color="Blue">
-                                <div class="color-circle" style="background-color: #3a7bd5;"></div>
-                                <span>Blue</span>
+                                <div class="color-circle" style="background-color: #d2c9c0;"></div>
+                                <span>Tan</span>
                             </div>
                         </div>
                     </div>
@@ -89,20 +89,20 @@
                 </div>
                 <div class="hero-image">
                     <div class="image-container">
-                        <img src="wireless headphone/H1bf2f19ea7874774803fd328dd1fe5eej.jpg" alt="Q86 Retro Wireless In-Ear Headset" class="main-product-image" id="mainProductImage">
+                        <img src="wireless headphone/white.jpg" alt="Q86 Retro Wireless In-Ear Headset" class="main-product-image" id="mainProductImage">
                         <div class="image-badge">
                             <span class="badge-text">Retro Design</span>
                         </div>
                     </div>
                     <div class="image-thumbnails">
-                        <div class="thumbnail active" data-image="wireless headphone/H2f09d965d8444024b12470680d0e4aeat.jpg">
-                            <img src="wireless headphone/H2f09d965d8444024b12470680d0e4aeat.jpg" alt="Headset Front">
+                        <div class="thumbnail active" data-image="wireless headphone/green.jpg">
+                            <img src="wireless headphone/green.jpg" alt="Headset Front">
                         </div>
                         <div class="thumbnail" data-image="wireless headphone/H3f69c9d433734047b5cc2c6d9f2aea67l.jpg">
                             <img src="wireless headphone/H3f69c9d433734047b5cc2c6d9f2aea67l.jpg" alt="Headset Side">
                         </div>
-                        <div class="thumbnail" data-image="wireless headphone/H443a239158a8470abf7fe67483b003fbq.jpg">
-                            <img src="wireless headphone/H443a239158a8470abf7fe67483b003fbq.jpg" alt="Headset in Case">
+                        <div class="thumbnail" data-image="wireless headphone/white.jpg">
+                            <img src="wireless headphone/white.jpg" alt="Headset in Case">
                         </div>
                     </div>
                 </div>
@@ -234,9 +234,9 @@
                         <div class="form-group">
                             <label for="color">Color</label>
                             <select id="color" name="color">
-                                <option value="Black">Black</option>
-                                <option value="White">White</option>
-                                <option value="Blue">Blue</option>
+                                <option value="Muted Green">Muted Green</option>
+                                <option value="Burnt Orange">Burnt Orange</option>
+                                <option value="Tan">Tan</option>
                             </select>
                         </div>
                     </div>
