Update image source in Home.html and add new images for the gallery

--- a/Home.html
+++ b/Home.html
@@ -191,7 +191,7 @@
                         <p>Integrated power digital display shows battery level and connection status at a glance.</p>
                     </div>
                     <div class="gallery-image">
-                        <img src="wireless headphone/H4f29c78c4a1b412db08e8df4dbf62eceb.jpg" alt="Digital Display">
+                        <img src="wireless headphone/multiple.jpg" alt="Digital Display">
                     </div>
                 </div>
             </div>
